# thunder_line_follower_pmr3100

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch  spawn_robot.launch
models/thunder_line_follower/: model.config
scripts/: keyboard_node.py
urdf/: thunder_line_follower.csv  thunder_line_follower.gazebo  thunder_line_follower.urdf  thunder_line_follower.xacro
urdf/sensors/: line.sensor  ultrasonic.sensor
