<package format="2">
  <name>thunder_line_follower_pmr3100</name>

  <version>0.1.1</version>

  <description>
    <p>Simulation environment for a line follower development</p>
    <p>Created for the discipline PMR3100 - Intro to Mechatronics from Poli-USP</p>
  </description>

  <maintainer email="comp@thunderatz.org">ThundeRatz</maintainer>

  <author email="felipegmelo@usp.br">Felipe Gomes de Melo</author>
  <author email="lucas.haug@thunderatz.org">Thalles Carneiro</author>
  <author email="thalles.carneiro@thunderatz.org">Lucas Haug</author>
  <author email="lucas.schneider@thunderatz.org">Lucas Schneider</author>
  <author email="felipe.bagni@thunderatz.org">Felipe Bagni</author>
  <author email="felipe.luna@thunderatz.org">Felipe Luna</author>
  <author email="leticia.kimoto@thunderatz.org">Leticia Kimoto</author>
  <author email="gabriel.kishida@thunderatz.org">Gabriel Kishida</author>
  <author email="vanderson.santos@thunderatz.org">Vanderson dos Santos</author>
  <author email="wu.kam@thunderatz.org">Wu Kam Long</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>velocity_controllers</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-pygame</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
